# bv2425ObjectDetection

./: .gitignore  .gitmodules  LICENSE  OSC_YOLO_Training.yml  README.md  activate_cuda.sh
CharacterModel/ImageGeneration/: randomShapeGenerator.py  synthCharCreation.py
Filtering/: filter.cpp  filter.py  filtering.py  filterv2.py
Image Segmenting/: create_subimages.py  test_overlap.py
ImageSplit/: SplitImages.py
ImageStitching/: Image_Stitching_Version1_Cropping.py  Image_Stitching_Version2.py  Image_Stitching_opt.py  image_stitching_Args.py
ImageStitching/C++/: CMakeLists.txt  Image_Stitching.cpp  VLFeat.cpp  vcpkg.json
ImageStitching/ImageDataCollection/: googlemaps.py  googlemaps_failure.py
ImageStitching/Python/: Image_Stitching.py  Image_Stitching_SIFT.py
ObjectModel/testing/misc/: image_inference.py
ShapeModel/: requirements.txt
ShapeModel/Training/: .nvidia_test.sh.swp  NVIDIA.txt  data.yaml  data1.yaml  env_test.py  nvidia_test.sh  train.py
ShapeModel/Training/train/: labels.cache
ShapeModel/Training/valid/: labels.cache
ShapeModel/test_pipeline/src/: testPoly.py
ShapeModel/testing/: cv_script.py
ShapeModel/testing/misc/: cv_for_images.py  image_inference.py
ShapeModel/train_test_tune_pipeline/: HyperParameter.txt  data_yaml.yaml  fine_tune.py  fine_tune.sh  main.py  testtemp.py
ShapeModel/train_test_tune_pipeline/testingAlg/: testMono.py  testPoly.py  (+1 more)
Subimaging/: create_subimages.py
Triangulation/: Triangulate.py  calibration.pkl  calibration.py  cameraMatrix.pkl  dist.pkl  getImages.py  intrinsics.py  triangulate.cpp
(+12 files in other folders)
